--- a/style.css
+++ b/style.css
@@ -12,3 +12,15 @@ h1, h2, p {
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
 }
+
+.flavor{
+    width: 49%;
+    text-align: left;
+}
+.price{
+    width: 49%;
+    text-align: right;
+}
+.item p{
+    display: inline-block;
+}
