--- a/style.css
+++ b/style.css
@@ -1,16 +1,26 @@
+body {
+    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    font-family: sans-serif;
+}
+
 h1, h2, p {
     text-align: center;
+}
+h1, h2 {
+    font-family: Impact;
 }
 
 .menu {
     margin-right: auto;
     margin-left: auto;
     width: 80%;
+    max-width: 500px;
     background-color: burlywood;
+    padding: 20px;
 }
 
-body {
-    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
+.established {
+    font-style: italic;
 }
 
 .flavor, .dessert{
