--- a/style.css
+++ b/style.css
@@ -43,4 +43,21 @@ hr{
 }
 .item p{
     display: inline-block;
+    font-size: 18px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+}
+.bottom-line {
+    margin-top: 25px;
+}
+/* FOOTER */
+
+footer{
+    font-size: 14px;
+}
+a{
+    color: black;
+}
+a:visited{
+    color: grey;
 }
