--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ h1, h2 {
 }
 h1 {
     font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
 }
 h2{
     font-size: 30px;
@@ -28,7 +30,15 @@ hr{
     background-color: burlywood;
     padding: 20px;
 }
-
+.adress {
+    margin-bottom: 15px;
+}
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -25px;
+}
 .established {
     font-style: italic;
 }
@@ -60,4 +70,10 @@ a{
 }
 a:visited{
     color: grey;
+}
+a:hover{
+    color: brown;
+}
+a:active{
+    color:brown;
 }
